fix for toggle vertical alignement

--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -63,7 +63,7 @@ $block: #{$fd-namespace}-form;
                 @include fd-type(#{$fd-form-label-font-size--check});
                 margin-bottom: 0;
                 vertical-align: middle;
-                display: inline-block;
+                display: flex;
                 align-items: center;
                 line-height: $fd-forms-height--input-check;
                 @include action-cursor;
